# xll-shell

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pluginloader.cpp  qmlengine.cpp
